--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,26 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit</title>
-</head>
-<body>
-    <h1>Edit Campground</h1>
-    <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="post">
-        <div>
-            <label for="title">Enter Campground name</label>
-            <input id="title" type="text" placeholder="Enter name" name="campground[title]" value="<%= campground.title %>">
+<% layout('layouts/boilerplate') %>
+<h1 class="text-center m-3">Edit Campground</h1>
+<div class="col-6 offset-3">
+<form action="/campgrounds/<%= campground._id %>?_method=PUT" method="post">
+     <div class="col-md-12 mb-3">
+        <label for="inputEmail4" class="form-label">Title</label>
+        <input type="text" name="campground[title]" class="form-control" id="inputEmail4" value="<%= campground.title %>">
+    </div>
+    <div class="col-md-12 mb-3">
+        <label for="inputPassword4" class="form-label">Location</label>
+        <input type="text" name="campground[location]" class="form-control" id="inputPassword4" value="<%= campground.location %>">
+    </div>
+    <div class="col-md-12 mb-3">
+        <label for="image" class="form-label">Image URL</label>
+        <input type="text" name="campground[image]" class="form-control" id="image" value="<%= campground.image %>">
+    </div>
+    <div class="col-md-12 mb-3">
+        <label for="price" class="form-label">Price</label>
+        <div class="input-group mb-3">
+            <span class="input-group-text" id="basic-addon1">$</span>
+            <input type="text" placeholder="0.00" name="campground[price]" class="form-control" id="price" aria-describedby="price" value="<%= campground.price %>">
         </div>
-        <div>
-            <label for="location">Enter Campground location</label>
-            <input id="location" type="text" placeholder="Enter location" name="campground[location]" value="<%= campground.location %>">
-        </div> 
-        <div>
-        <button>Edit</button> 
-        <a href="/campgrounds/<%= campground._id %>">cancel</a>
-    </div>  
+    </div>
+    <div class="col-md-12 mb-3">
+        <label for="description" class="form-label">Description</label>
+        <textarea class="form-control" name="campground[description]" id="description" aria-label="With textarea" style="height: 100px"><%= campground.description %></textarea>
+    </div>
+    <div class="col-12 mx-auto text-left mb-3">
+        <button type="submit" class="btn px-3 btn-success">Edit</button>
+        <a href="/campgrounds/<%= campground._id%>" class="btn btn-secondary ms-3">Back</a>
+    </div>
     </form>
-</body>
-</html>
+</div>
