--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,20 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campgrounds list</title>
-</head>
-<body>
-    <h1>All Campgrounds</h1>
-    <div>
-        <a href="/campgrounds/new">new</a>
+<% layout('layouts/boilerplate') %>
+<h1 class="mt-3">All Campgrounds</h1>
+<div class="row-sm-3 offset-10 mb-3">
+    <a href="/campgrounds/new" class="btn btn-sm btn-primary">Create new campground</a>
+</div>
+<% for(campground of campgrounds) {%>
+    <div class="card mb-3">
+        <div class="row">
+            <div class="col-md-4">
+                <img src="<%= campground.image %> " class="img-fluid rounded-start m-2" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <div class="row">
+                        <h5 class="card-title col-6">
+                            <%= campground.title %>
+                        </h5>
+                        <span class="text-end text-success col-6">
+                            <%= campground.price %>$
+                        </span>
+                    </div>
+
+                    <small class="text-muted">
+                        <%= campground.location %>
+                    </small>
+                    <p class="card-text">
+                        <%= campground.description %>
+                    </p>
+                    <a href="/campgrounds/<%= campground._id %> " class="btn btn-secondary">View <%= campground.title
+                            %>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
-    <ul>
-        <% for(camp of campgrounds) {%>
-            <li> <a href="/campgrounds/<%= camp._id %>"><%= `${camp.title}`%>  - <b> <%=`${camp.location}`%> </b> </a></li>
-        <% } %>  
-    </ul>
-</body>
-</html>
+</div>
+
+    <% } %>
