--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -13,6 +13,7 @@
 <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar') %> 
     <main class="container">
+        <%- include('../partials/alerts') %> 
         <%- body %>
     </main>
     <%- include('../partials/footer') %> 
