auth without authmiddlewareand passport.authenticate

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
 <h1 class="mt-3">All Campgrounds</h1>
 <div class="row-sm-3 offset-10 mb-3">
-    <a href="/campgrounds/new" class="btn btn-sm btn-primary">Create new campground</a>
+    <a href="/campgrounds/new" class="btn btn-sm py-2 btn-primary">Create new Campground</a>
 </div>
 <% for(campground of campgrounds) {%>
     <div class="card mb-3">
