--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,11 +5,11 @@
 <form action="/login" method="POST">
     <div class="mb-3">
         <label for="username" class="form-label">Username</label>
-        <input type="text" name="auth[username]" class="form-control" id="username" aria-describedby="emailHelp">
+        <input type="text" name="username" class="form-control" id="username" aria-describedby="emailHelp">
     </div>
     <div class="mb-3">
       <label for="password" class="form-label">Password</label>
-      <input type="password" name="auth[password]" class="form-control" id="password">
+      <input type="password" name="password" class="form-control" id="password">
     </div>
     <div class="mb-3 form-check">
       <input type="checkbox" class="form-check-input" id="check">
