pre-cloudinary image upload

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -15,7 +15,7 @@
                         <h5 class="card-title col-6">
                             <%= campground.title %>
                         </h5>
-                        <span class="text-end text-success col-6">
+                        <span class="text-end h4 text-success col-6">
                             <%= campground.price %>$
                         </span>
                     </div>
