--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,6 +1,7 @@
 <% layout('layouts/boilerplate') %>
-<div class="row">
-<div class="card col-6 my-3">
+<link rel="stylesheet" href="/css/stars.css">
+<div class="row row-cols-sm-1 row-cols-md-2">
+<div class="card col my-3">
     <img src="<%= campground.image %>" class="img-thumbnail" alt="...">
     <div class="card-body">
       <h5 class="card-title"><%= campground.title %></h5>
@@ -11,53 +12,66 @@
       <li class="list-group-item">Price: <%= campground.price %>$/night</li>
       <li class="list-group-item">Submitted by: <%= campground.submittedBy.username %></li>
     </ul>
-    <div class="card-body">
+    <div class="card-body row row-cols-sm-1 row-cols-md-3">
       <% if(currentUser && currentUser._id.equals(campground.submittedBy._id)) {%> 
-        <div>
+        <div class="col text-center">
             <a href="/campgrounds/<%= campground._id%>/edit" class="btn btn-warning m-1 px-3">Edit</a>
         </div>
-        <div>
+        <div class="col text-center">
             <form action="/campgrounds/<%= campground._id%>?_method=DELETE" class="form" method="post">
                 <button class="btn btn-danger m-1">Delete</button>
             </form>
         </div>
         <% } %> 
-        <div>
-          <a href="/campgrounds" class="btn btn-secondary  m-1">All Campgrounds</a>
+        <div class="col text-center">
+          <a href="/campgrounds" class="btn btn-secondary btn-sm p-2 m-1">All Campgrounds</a>
         </div>
     </div>
     <div class="card-footer text-muted">
         2 days ago
     </div>
 </div>
-<div class="col-6 my-3">
+<div class="col my-3">
   <% if(currentUser) {%>
-  <h2>Leave a Review</h2>
+    <h2>Leave a Review</h2>
+  <div class="text-center">
   <form action="/campgrounds/<%= campground._id%>/reviews" method="post">
-    <div class="my-3">
-      <div class="my-3">
-        <label for="rating" class="form-label">Rating</label>
-        <input type="range" name="review[rating]" class="form-range" min="1" max="5" id="rating">
-      </div>
-      <div class="my-3">
+    <div class="mt-3 d-flex justify-content-center">
+        <fieldset class="starability-basic">
+          <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+          <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+          <label for="first-rate1" title="Terrible">1 star</label>
+          <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+          <label for="first-rate2" title="Not good">2 stars</label>
+          <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+          <label for="first-rate3" title="Average">3 stars</label>
+          <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+          <label for="first-rate4" title="Very good">4 stars</label>
+          <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+          <label for="first-rate5" title="Amazing">5 stars</label>
+        </fieldset>
+      </div>        
+      <div class="mb-3 d-flex flex-column align-items-start">
         <label for="body" class="form-label">Review</label>
         <textarea id="body" name="review[body]" cols="30" rows="3" class="form-control" aria-label="review body"></textarea>
       </div>
       <button class="btn btn-success">Submit</button>
-    </div>
   </form>
+  </div>
   <% } %>  
     <div>
       <% for(let review of campground.reviews){%>
         <div class="card my-3">
         <div class="class-body m-3 row">
-          <div class="col-6">
-            <h5>Rating: <%= review.rating %> </h5>
-            <h6 class="card-subtitle mb-2 text-muted">By: <%= review.submittedBy.username %></h6>
-            <p class="card-text">Review: <%= review.body %></p> 
+          <div class="col order-sm-1">
+            <h6 class="card-subtitle mb-2 text-muted"><%= review.submittedBy.username %></h6>
+            <p class="starability-result" data-rating="<%= review.rating %>">
+              Rated: <%= review.rating %> stars
+            </p>
+            <p class="card-text"><%= review.body %></p> 
           </div>
         <% if(currentUser && currentUser._id.equals(review.submittedBy._id)) {%> 
-          <div class="my-1 col-6 text-end">
+          <div class="my-1 col order-sm-2 row mt-3 text-end">
           <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
             <button class="btn btn-sm btn-danger">Delete</button>
           </form>
