--- a/views/list.ejs
+++ b/views/list.ejs
@@ -7,7 +7,7 @@
     <div class="card mb-3">
         <div class="row">
             <div class="col-md-4">
-                <img src="<%= campground.image %> " class="img-fluid rounded-start m-2" alt="...">
+                <img src="<%= campground.image[0].path %>" class="img-fluid rounded-start m-2" alt="...">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
