--- a/views/new.ejs
+++ b/views/new.ejs
@@ -10,14 +10,10 @@
                 <label for="inputPassword4" class="form-label">Location</label>
                 <input type="text" name="campground[location]" class="form-control" id="inputPassword4">
             </div>
-            <div>
-                <label for="image" class="form-label">Image</label>
-                <input type="file" name="image" id="image" multiple>
+            <div class="mb-3 col-md-12">
+                <label for="image" class="form-label">Choose images of campground</label>
+                <input class="form-control" name="image" type="file" id="image" multiple>
             </div>
-            <!-- <div class="col-md-12 mb-3">
-                <label for="image" class="form-label">Image URL</label>
-                <input type="text" name="campground[image]" class="form-control" id="image">
-            </div> -->
             <div class="col-md-12 mb-3">
                 <label for="price" class="form-label">Price</label>
                 <div class="input-group mb-3">
