--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,9 @@
       <input type="checkbox" class="form-check-input" id="check">
       <label class="form-check-label" for="check">Keep me Sign in</label>
     </div>
+    <div class=" d-flex justify-content-center me-1">
     <button type="submit" class="btn btn-primary">Submit</button>
+  </div>
 </form>
 </div>
 </div>
