--- a/views/show.ejs
+++ b/views/show.ejs
@@ -23,7 +23,7 @@
   </div>
     <div class="card-body">
       <h5 class="card-title"><%= campground.title %></h5>
-      <p class="card-text"><%console.log(campground.description) %></p>
+      <p class="card-text"><%= campground.description%></p>
     </div>
     <ul class="list-group list-group-flush">
         <li class="list-group-item text-muted"><%= campground.location %></li>
