--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,13 +1,13 @@
 <% layout('layouts/boilerplate') %>
 <h1 class="mt-3">All Campgrounds</h1>
 <div class="row-sm-3 offset-10 mb-3">
-    <a href="/campgrounds/new" class="btn btn-sm py-2 btn-primary">Create new Campground</a>
+    <a href="/campgrounds/new" class="btn btn-sm py-2 btn-dark">Create new Campground</a>
 </div>
 <% for(campground of campgrounds) {%>
     <div class="card mb-3">
-        <div class="row">
-            <div class="col-md-4">
-                <img src="<%= campground.image[0].path %>" class="img-fluid rounded-start m-2" alt="...">
+        <div class="row row-cols-1 row-cols-lg-2">
+            <div class="col d-block mx-auto col-md-4">
+                <img src="<%= campground.image[0].path %>?w=360" class="img-thumbnail rounded-start m-2" alt="..." crossorigin>
             </div>
             <div class="col-md-8">
                 <div class="card-body">
@@ -26,7 +26,7 @@
                     <p class="card-text">
                         <%= campground.description %>
                     </p>
-                    <a href="/campgrounds/<%= campground._id %> " class="btn btn-secondary">View <%= campground.title
+                    <a href="/campgrounds/<%= campground._id %> " class="btn btn-primary">View <%= campground.title
                             %>
                     </a>
                 </div>
