--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
 <div class="row m-3">
-<div class="col-6 offset-3">
+<div class="col col-md-6 offset-md-3">
 <h3 class="text-center text-success">Login</h3>
 <form action="/login" method="POST">
     <div class="mb-3">
