--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
     <h1 class="text-center m-3">Create a new Campground</h1>
-    <div class="col-6 offset-3">
+    <div class="col col-md-6 offset-md-3">
         <form action="/campgrounds" class="col" method="POST" enctype="multipart/form-data">
             <div class="col-md-12 mb-3">
                 <label for="inputEmail4" class="form-label">Title</label>
@@ -25,9 +25,9 @@
                 <label for="description" class="form-label">Description</label>
                 <textarea class="form-control" name="campground[description]" id="description" aria-label="With textarea"></textarea>
             </div>
-            <div class="text-center ali d-flex justify-content-center flex-row mb-3">
-                <button type="submit" class="btn me-md-5 me-sm-3 btn-success">Create</button>
-                <a href="/campgrounds" class="btn btn-secondary me-sm-3 me-md-5">Back</a>
+            <div class="d-flex justify-content-center flex-row mb-3">
+                <button type="submit" class="btn me-md-5 me-3 btn-success">Create</button>
+                <a href="/campgrounds" class="btn btn-secondary me-3 me-md-5">Back</a>
             </div>
         </form>
     </div>
